--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,41 @@
 /* main.css code here */
+
+body {
+  font-family:Verdana, sans-serif;
+  font-size:14px;
+}
+
+main {
+  display:block;
+  height: 400px;
+}
+
+header {
+  background-color:#EEE8CD;
+  border-bottom:1px solid #333;
+  color:#B8860B;
+  padding:20px;
+}
+
+h3 {
+  font-size:30px;
+  margin: 20px 0 0 10px;
+}
+
+footer {
+  margin-top:50px;
+  background-color:#EEE8CD;
+  border-top:1px solid #333;
+  color:#B8860B;
+  padding:20px;
+}
+
+.deliveries {
+  width: 90%;
+  margin: 25px;
+  display: inline-block;
+}
+
+.deliveries input {
+  margin-right: 10px;
+}
