--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,10 @@ form {
 background: aqua;
 width:550px;
 height:450px;
+font-size: 14px;
+font-style: italic;
+line-height: 24px;
+font-weight: bold;
 
 }
 
