--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@ text-decoration: none;
 -webkit-border-radius: 10px;
 -moz-border-radius: 10px;
 border-radius: 10px;
+padding:10px;
 }
 
 .button {
