--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,7 @@ span {
 .form-input input {
         width: 100%;
         clear: both;
+        border: 1px solid #999;
 }
 
 /* ****************************Navigation******************************* */
