--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,11 @@ span {
     clear: both;
     border: 1px solid #999;
     height: 30px;
+    font-size: 15px;
+    -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+
 }
 
 /* ****************************Navigation******************************* */
