--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,12 @@ footer {
   display: inline-block;
 }
 
+#sales {
+
+  margin: 25px;
+  display: inline-block;
+}
+
 input {
   margin-top: 5px;
   margin-right: 8px;
@@ -55,7 +61,7 @@ input {
 }
 
 form {
-background: aqua;
+background: rgb(252, 188, 50);
 width:550px;
 height:600px;
 font-size: 14px;
@@ -107,8 +113,9 @@ span {
     -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-
+    padding-left: 6px;
 }
+
 
 /* ****************************Navigation******************************* */
 
@@ -164,5 +171,5 @@ header nav a:hover {
 }
 
 .active {
-     background-color: #efcbae;
+     background-color: rgb(252, 188, 50);
   }
