Styla button-knappen

--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,27 @@ box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   clear:both;
 }
 
+.black {
+  color: #fff;
+  border: 1px solid #4d4d4d;
+  background-image: -moz-linear-gradient(#656565, #454545);
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#454545), to(#656565));
+  background-image: -webkit-linear-gradient(#656565, #454545);
+  background-image: -o-linear-gradient(#656565, #454545);
+  text-shadow: 1px 1px 1px #6d6d6d;
+  background-color: #454545;
+  cursor: pointer;
+}
+.black:hover {
+  border: 1px solid #363636;
+  background-image: -moz-linear-gradient(#454545, #656565);
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#656565), to(#454545));
+  background-image: -webkit-linear-gradient(#454545, #656565);
+  background-image: -o-linear-gradient(#454545, #656565);
+  background-color: #656565;
+}
+.black:active {border: 1px solid #000;}
+
 .on-error {
   display:none;
   color:#900;
