--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,10 @@ footer {
   height:184px;
 }
 
+#inleverans_resultat_ajax {
+  color: red;
+}
+
 input {
   margin-top: 5px;
   margin-right: 8px;
@@ -79,6 +83,25 @@ form {
   -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
 
+}
+
+
+.form-input {
+   width: 500px;
+   clear: both;
+   margin: auto;
+}
+
+.form-input input {
+    width: 100%;
+    clear: both;
+    border: 1px solid #999;
+    height: 30px;
+    font-size: 15px;
+    -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    padding-left: 6px;
 }
 
 .button {
