--- a/css/main.css
+++ b/css/main.css
@@ -54,8 +54,19 @@ footer {
 }
 
 #inleverans_resultat_ajax {
+  display: inline-block;
+  width: 300px;
+  height: 440px;
+  margin-top: 17px;
+  margin-left: 25px;
+  padding-top: 30px;
+  padding-left: 25px;
+  border: 1px solid black;
+  border-radius: 10px;
   color: red;
+
 }
+
 
 input {
   margin-top: 5px;
@@ -84,7 +95,7 @@ form {
   -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-
+  float: left;
 }
 
 label {
