--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,12 @@ footer {
   padding-top: 30px;
 }
 
+#sellingprice {
+
+  height:140px;
+  padding-top: 30px;
+}
+
 #inleverans_resultat_ajax {
   display: inline-block;
   width: 300px;
