--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,50 @@ h3 {
   margin: 10px 0 0 10px;
 }
 
+
+table {
+
+  border-collapse: separate;
+  border-spacing: 1px;
+  border: 1px solid #000;
+  border-color: gray;
+  border-radius: 10px;
+  margin: 65px auto 0;
+  padding: 8px 5px 5px 5px;
+  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+
+
+}
+
+thead {
+  background-color:#EEE8CD;
+  font-weight: bold;
+  text-align: left;
+  border-bottom: 1px solid #000;
+}
+
+th {
+  margin: 8px 5px 5px 5px;
+  padding: 8px 5px 5px 5px; 
+}
+
+
+td {
+
+  padding:2px;
+  background-color:#EEE8CD;
+  border-bottom: 1px solid #000;
+}
+td:nth-child(odd) {
+
+  padding:10px;
+  background-color:#fff;
+}
+
+
+
 footer {
   margin-top:50px;
   background-color:#EEE8CD;
