--- a/css/main.css
+++ b/css/main.css
@@ -35,14 +35,14 @@ h3 {
 
 
 table {
-
+  background: rgb(252, 188, 50);
   border-collapse: separate;
-  border-spacing: 1px;
+  border-spacing: 0.1px;
   border: 1px solid #000;
   border-color: gray;
   border-radius: 10px;
-  margin: 65px auto 0;
-  padding: 8px 5px 5px 5px;
+  margin: 45px auto 0;
+  padding: 5px 5px 5px 5px;
   -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
