--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,34 @@ footer {
 
 }
 
+#forsaljning_resultat_ajax {
+  display: inline-block;
+  width: 300px;
+  height: 440px;
+  margin-top: 17px;
+  margin-left: 25px;
+  padding-top: 30px;
+  padding-left: 25px;
+  border: 1px solid black;
+  border-radius: 10px;
+  color: red;
+
+}
+
+#sell_price_result_ajax {
+  display: inline-block;
+  width: 300px;
+  height: 440px;
+  margin-top: 17px;
+  margin-left: 25px;
+  padding-top: 30px;
+  padding-left: 25px;
+  border: 1px solid black;
+  border-radius: 10px;
+  color: red;
+
+}
+
 
 input {
   margin-top: 5px;
