--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ footer {
   margin-left: 25px;
   padding-top: 30px;
   padding-left: 25px;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   border: 1px solid black;
   border-radius: 10px;
   color: red;
@@ -131,8 +132,15 @@ footer {
   margin-left: 25px;
   padding-top: 30px;
   padding-left: 25px;
-  border: 1px solid black;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
   border-radius: 10px;
+  padding:10px;
+  border: 1px solid #999;
+  border: inset 1px solid #333;
+  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   color: red;
 
 }
@@ -145,8 +153,15 @@ footer {
   margin-left: 25px;
   padding-top: 30px;
   padding-left: 25px;
-  border: 1px solid black;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
   border-radius: 10px;
+  padding:10px;
+  border: 1px solid #999;
+  border: inset 1px solid #333;
+  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   color: red;
 
 }
