--- a/css/main.css
+++ b/css/main.css
@@ -115,11 +115,16 @@ footer {
   height: 440px;
   margin-top: 17px;
   margin-left: 25px;
-  padding-top: 30px;
+  padding-top: 50px;
   padding-left: 25px;
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  border: 1px solid black;
+ -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
   border-radius: 10px;
+  border: 1px solid #999;
+  border: inset 1px solid #333;
+  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   color: red;
 
 }
@@ -130,12 +135,11 @@ footer {
   height: 440px;
   margin-top: 17px;
   margin-left: 25px;
-  padding-top: 30px;
+  padding-top: 50px;
   padding-left: 25px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-  padding:10px;
   border: 1px solid #999;
   border: inset 1px solid #333;
   -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
@@ -151,12 +155,11 @@ footer {
   height: 440px;
   margin-top: 17px;
   margin-left: 25px;
-  padding-top: 30px;
+  padding-top: 50px;
   padding-left: 25px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-  padding:10px;
   border: 1px solid #999;
   border: inset 1px solid #333;
   -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
