--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ footer {
   margin-left: 25px;
   padding-top: 50px;
   padding-left: 25px;
+  background-color:#f2ecd2;
  -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
@@ -137,6 +138,7 @@ footer {
   margin-left: 25px;
   padding-top: 50px;
   padding-left: 25px;
+  background-color:#f2ecd2;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
@@ -157,6 +159,7 @@ footer {
   margin-left: 25px;
   padding-top: 50px;
   padding-left: 25px;
+  background-color:#f2ecd2;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
